--- a/bt_cau_truc_dieu_kien/baitap_cal_weight/index.html
+++ b/bt_cau_truc_dieu_kien/baitap_cal_weight/index.html
@@ -19,39 +19,14 @@
         let bmi = weight / (height ** 2);
         const result = document.querySelector('.result');
 
-        if (bmi < 16) {
-            result.innerText = "Gầy độ III";
-        } else {
-            if(16 <= bmi && bmi < 17) {
-                result.innerText = "Gầy độ II";
-            } else {
-                if(17 <= bmi && bmi < 18.5) {
-                    result.innerText = "Gầy độ I";
-                } else {
-                    if(18.5 <= bmi && bmi < 25) {
-                        result.innerText = "Bình thường";
-                    } else {
-                        if(25 <= bmi && bmi < 30) {
-                            result.innerText = "Thừa cân";
-                        } else {
-                            if(30 <= bmi && bmi < 35) {
-                                result.innerText = "Béo phì độ I";
-                            } else {
-                                if(35 <= bmi && bmi < 40) {
-                                    result.innerText = "Béo phì độ II";
-                                } else {
-                                    if(bmi > 40) {
-                                        result.innerText = "Béo phì độ III";
-                                    } else {
-                                        result.innerText = "Vui lòng nhập chiều cao và cân nặng hợp lệ";
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        } 
+        if(bmi < 16) result.innerText = "Gầy độ III";
+        else if(bmi < 17) result.innerText = "Gầy độ II";
+        else if(bmi < 18.5) result.innerText = "Gầy độ I";
+        else if(bmi < 25) result.innerText = "Bình thường";
+        else if(bmi < 30) result.innerText = "Thừa cân";
+        else if(bmi < 35) result.innerText = "Béo phì độ I";
+        else if(bmi < 40) result.innerText = "Béo phì độ II";
+        else result.innerText = "Béo phì độ III";
     </script>
 </body>
 </html>
