add btvn if else

--- a/bt_cau_truc_dieu_kien/baitap_calculator/index.html
+++ b/bt_cau_truc_dieu_kien/baitap_calculator/index.html
@@ -17,28 +17,28 @@
 
         <div class="cal__body">
             <div class="row">
-                <button class="col col--4 btn" value="1">1</button>
-                <button class="col col--4 btn" value="2">2</button>
-                <button class="col col--4 btn" value="3">3</button>
-                <button class="col col--4 btn" value="+">+</button>
+                <button class=" number col col--4 btn" value="1">1</button>
+                <button class=" number col col--4 btn" value="2">2</button>
+                <button class=" number col col--4 btn" value="3">3</button>
+                <button class=" operator col col--4 btn" value="+">+</button>
             </div>
             <div class="row">
-                <button class="col col--4 btn" value="4">4</button>
-                <button class="col col--4 btn" value="5">5</button>
-                <button class="col col--4 btn" value="6">6</button>
-                <button class="col col--4 btn" value="-">-</button>
+                <button class=" number col col--4 btn" value="4">4</button>
+                <button class=" number col col--4 btn" value="5">5</button>
+                <button class=" number col col--4 btn" value="6">6</button>
+                <button class=" operator col col--4 btn" value="-">-</button>
             </div>
             <div class="row">
-                <button class="col col--4 btn" value="7">7</button>
-                <button class="col col--4 btn" value="8">8</button>
-                <button class="col col--4 btn" value="9">9</button>
-                <button class="col col--4 btn" value="*">x</button>
+                <button class=" number col col--4 btn" value="7">7</button>
+                <button class=" number col col--4 btn" value="8">8</button>
+                <button class=" number col col--4 btn" value="9">9</button>
+                <button class=" operator col col--4 btn" value="*">x</button>
             </div>
             <div class="row">
-                <button class="col col--4 btn del">C</button>
-                <button class="col col--4 btn" value="0">0</button>
-                <button class="col col--4 btn equal">=</button>
-                <button class="col col--4 btn" value="/">/</button>
+                <button class=" number col col--4 btn del">C</button>
+                <button class=" number col col--4 btn" value="0">0</button>
+                <button class=" number col col--4 btn equal">=</button>
+                <button class=" operator col col--4 btn" value="/">/</button>
             </div>
         </div>
 
