--- a/bt_cau_truc_lap/bt_ve_tam_giac/index.html
+++ b/bt_cau_truc_lap/bt_ve_tam_giac/index.html
@@ -27,7 +27,7 @@
         for (let i = 1; i <= 5; i++) {
             for (let j = 1; j <= 5; j++) {
                 if (j <= 5 - i) {
-                    document.write("&nbsp&nbsp");
+                    document.write("&ensp;");
                 } else {
                     document.write("*");
                 } 
@@ -39,7 +39,7 @@
         for (let i = 1; i <= 5; i++) {
             for (let j = 1; j <= 5; j++) {
                 if (j <= i - 1) {
-                    document.write("&nbsp&nbsp");
+                    document.write("&ensp;");
                 } else {
                     document.write("*");
                 }
