--- a/baitap_function/baitap_check_so_nguyen_to/index.html
+++ b/baitap_function/baitap_check_so_nguyen_to/index.html
@@ -10,7 +10,7 @@
     
 
     <script>
-        function isPrime(number) {
+        function checkPrime(number) {
             let N = 2;
             while (N <= number) {
                 let isPrime = true;
@@ -27,7 +27,7 @@
             }
         }
 
-        isPrime(100);
+        checkPrime(100);
     </script>
 </body>
 </html>
