--- a/bt_doi_tuong/bt_co_caro/index.html
+++ b/bt_doi_tuong/bt_co_caro/index.html
@@ -5,28 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cờ Caro</title>
-    <style>
-        button {
-            margin: 50px;
-            padding: 10px;
-        }
-
-        #app {
-            margin: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button onclick="show()">Play Game</button>
-    <div id="app"></div>
+    <button>Play Game</button>
+    <div class="main">
+        <h2 class="result"></h2>
+    </div>
 
-
-    <script>
-        const app = document.getElementById("app");
-
-        function show() {
-            // let html = 
-        }
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html>
